# lieutenant

./: .gitmodules  LICENSE  README.md  counting.ipynb  pyproject.toml
src/lieutenant/: __main__.py  memory.py  pronounce.py
src/lieutenant/major/: __init__.py  decode.py  encode.py
src/lieutenant/resources/brown/: detokenize.py
tests/: test_major_decode.py  test_major_encode.py  test_pronounce.py
